--- a/index.html
+++ b/index.html
@@ -1,14 +1,260 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portafolio de [Tu Nombre]</title>
+    <style>
+        /* Estilos Generales */
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        /* Contenedor Principal */
+        .container {
+            max-width: 960px;
+            margin: auto;
+            overflow: hidden;
+            padding: 0 20px;
+        }
+
+        /* Encabezado y Navegación */
+        header {
+            background: #333;
+            color: #fff;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #77aaff 3px solid;
+        }
+
+        header a {
+            color: #fff;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 16px;
+        }
+
+        header ul {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            float: right;
+        }
+
+        header li {
+            display: inline;
+            padding: 0 20px 0 20px;
+        }
+
+        header #branding {
+            float: left;
+        }
+
+        header #branding h1 {
+            margin: 0;
+        }
+
+        /* Sección de Presentación */
+        #showcase {
+            min-height: 400px;
+            background: #77aaff;
+            color: white;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #showcase h1 {
+            font-size: 55px;
+            margin-bottom: 10px;
+        }
+
+        #showcase p {
+            font-size: 20px;
+        }
+        
+        /* Estilos de las Secciones */
+        section {
+            padding: 20px 0;
+            border-bottom: 1px solid #ddd;
+        }
+
+        section h2 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+            font-size: 2.5em;
+        }
+
+        /* Experiencia y Proyectos */
+        .item {
+            background: #fff;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-left: 5px solid #77aaff;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .item h3 {
+            margin-top: 0;
+            color: #333;
+        }
+        .item p {
+            margin: 5px 0;
+        }
+        .item .date {
+            color: #666;
+            font-style: italic;
+        }
+
+        /* Educación */
+        #educacion ul {
+            list-style: none;
+            padding: 0;
+        }
+        #educacion li {
+            background: #fff;
+            padding: 15px;
+            margin-bottom: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        /* Contacto */
+        #contacto p {
+            text-align: center;
+        }
+        #contacto a {
+            color: #77aaff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        /* Pie de Página */
+        footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Proyecto de reporte de ventas.</h1>
+    <header>
+        <div class="container">
+            <div id="branding">
+                <h1><a href="#">[Tu Nombre]</a></h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#sobre-mi">Sobre mí</a></li>
+                    <li><a href="#experiencia">Experiencia</a></li>
+                    <li><a href="#proyectos">Proyectos</a></li>
+                    <li><a href="#educacion">Educación</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <p>Texto</p>
-    
+    <section id="showcase">
+        <div class="container">
+            <h1>[Tu Nombre]</h1>
+            <p>[Tu Profesión o Especialidad]</p>
+            <p>Apasionado por la tecnología y la creación de soluciones innovadoras.</p>
+        </div>
+    </section>
+
+    <div class="container">
+        <section id="sobre-mi">
+            <h2>Sobre Mí 👨‍💻</h2>
+            <p>
+                Aquí puedes escribir una breve introducción sobre ti. Habla de tus pasiones, tus habilidades clave y lo que te motiva profesionalmente. Menciona las tecnologías o áreas en las que te especializas y qué tipo de oportunidades estás buscando.
+            </p>
+        </section>
+
+        <hr>
+
+        <section id="experiencia">
+            <h2>Experiencia Laboral 🏢</h2>
+            <div class="item">
+                <h3>[Cargo Ocupado]</h3>
+                <p><strong>[Nombre de la Empresa]</strong> | [Ciudad, País]</p>
+                <p class="date">[Mes, Año] de Inicio – [Mes, Año] de Finalización (o "Presente")</p>
+                <ul>
+                    <li>Descripción de tu rol y tus responsabilidades principales.</li>
+                    <li>Logro cuantificable: "Incrementé la eficiencia en un 20% mediante la automatización de procesos".</li>
+                    <li>Menciona las tecnologías o herramientas que utilizaste.</li>
+                </ul>
+            </div>
+            <div class="item">
+                <h3>[Cargo Ocupado Anterior]</h3>
+                <p><strong>[Nombre de la Empresa Anterior]</strong> | [Ciudad, País]</p>
+                <p class="date">[Mes, Año] de Inicio – [Mes, Año] de Finalización</p>
+                <ul>
+                    <li>Descripción de tu rol y tus responsabilidades en este puesto.</li>
+                    <li>Otro logro importante que demuestre tu impacto en la empresa.</li>
+                    <li>Otras tecnologías y habilidades que aplicaste.</li>
+                </ul>
+            </div>
+        </section>
+
+        <hr>
+
+        <section id="proyectos">
+            <h2>Proyectos Destacados ✨</h2>
+            <div class="item">
+                <h3>[Nombre del Proyecto 1]</h3>
+                <p>Breve descripción del proyecto. ¿Qué problema resolvía? ¿Cuál fue tu rol?</p>
+                <p><strong>Tecnologías utilizadas:</strong> HTML, CSS, JavaScript, React, etc.</p>
+                <p><a href="[Enlace al proyecto o repositorio]" target="_blank">Ver Proyecto</a></p>
+            </div>
+            <div class="item">
+                <h3>[Nombre del Proyecto 2]</h3>
+                <p>Descripción de otro proyecto interesante que hayas desarrollado, ya sea personal, académico o profesional.</p>
+                <p><strong>Tecnologías utilizadas:</strong> Python, Django, PostgreSQL, etc.</p>
+                <p><a href="[Enlace al proyecto o repositorio]" target="_blank">Ver Proyecto</a></p>
+            </div>
+        </section>
+
+        <hr>
+
+        <section id="educacion">
+            <h2>Educación 🎓</h2>
+            <ul>
+                <li>
+                    <strong>[Nombre de la Institución]</strong><br>
+                    [Tu Título o Grado], [Año de Graduación]
+                </li>
+                <li>
+                    <strong>[Nombre de otro curso o certificación]</strong><br>
+                    [Certificación], [Año]
+                </li>
+            </ul>
+        </section>
+
+        <hr>
+
+        <section id="contacto">
+            <h2>Contacto 📧</h2>
+            <p>Si estás interesado en mi perfil, no dudes en contactarme.</p>
+            <p>Email: <a href="mailto:[tu-email@dominio.com]">[tu-email@dominio.com]</a></p>
+            <p>
+                <a href="https://www.linkedin.com/help/linkedin/answer/a564064/tu-perfil-en-linkedin?lang=es" target="_blank">LinkedIn</a> | 
+                <a href="https://docs.github.com/es/account-and-profile/setting-up-and-managing-your-github-profile/customizing-your-profile/about-your-profile" target="_blank">GitHub</a>
+            </p>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 [Tu Nombre]. Todos los derechos reservados.</p>
+    </footer>
+
 </body>
 </html>
